--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.28.1",
     "@supabase/supabase-js": "^2.53.0",
     "next": "15.4.5",
     "react": "19.1.0",
